indico/htdocs/sass/widgets/_permissions.scss
/* This file is part of Indico.
 * Copyright (C) 2002 - 2017 European Organization for Nuclear Research (CERN).
 *
 * Indico is free software; you can redistribute it and/or
 * modify it under the terms of the GNU General Public License as
 * published by the Free Software Foundation; either version 3 of the
 * License, or (at your option) any later version.
 *
 * Indico is distributed in the hope that it will be useful, but
 * WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 * General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with Indico; if not, see <http://www.gnu.org/licenses/>.
 */

@mixin role-code() {
    @include border-all();
    @include border-radius();
    padding: 0.1em;
}

.permissions-widget-list {
    @include border-left($width: 3px);
    padding-left: 1em;

    & > li {
        padding: 0.25em 0;
    }

    ul {
        padding: 0;
        list-style-type: none;
    }

    .label-box {
        flex-basis: 25%;
        margin-right: 1em;

        .label-icon::before,
        .role-code {
            margin-right: 0.5em;
        }

        .label-icon::before {
            color: $light-black;
            font-size: 1.1em;
        }

        .label-icon.icon-mail::before {
            vertical-align: middle;
        }

        .role-code {
            @include role-code();
        }
    }

    .permissions-box {
        @include border-all($style: dashed);
        @include transition(background-color 0.25s);
        cursor: initial;
        padding: 0.3em 0.5em;
        width: 100%;

        &:hover {
            background-color: $light-gray;
        }

        ul {
            li {
                font-size: 0.8em;
                margin: 0.4em 0.5em;
                padding: 0.6em 1em;
                text-transform: uppercase;
            }
        }

        .group {
            margin-left: auto;

            & > button {
                margin: 0;
                padding: 0.2em 0.7em;
            }
        }
    }
}

#permissions-add-entry-menu {
    display: none;

    a {
        margin-left: 0;
    }

    .dropdown {
        .role-item {
            white-space: nowrap;

            .role-code {
                @include role-code();
                margin-right: 0.5em;
            }
        }
    }
}

@mixin circle-checkbox-checked() {
    background-color: $pastel-blue;
    border: 2px solid $darker-blue;
}

.permissions-dialog {
    .permissions {
        list-style-type: none;
        padding: 0.25em 1em;

        label {
            color: $light-black;
            cursor: pointer;
            font-family: 'Roboto', sans-serif;
            font-size: 14px;
            font-weight: normal;
        }

        .item {
            padding: 0.25em 1em;
        }

        .permissions > .item {
            @include border-left(lighten($pastel-gray, 7%), $width: 2px);
        }

        .circle-checkbox {
            display: none;

            & + label::before {
                @include border-all($gray, $width: 2px);
                border-radius: 3em;
                content: '';
                display: inline-block;
                margin-right: 0.25em;
                vertical-align: middle;
                height: 23px;
                width: 23px;
            }

            &:hover:not(:checked) + label::before {
                background-color: $light-blue;
            }

            &:checked + label::before {
                @include circle-checkbox-checked();
            }

            &:hover:checked + label::before {
                background-color: $light-blue;
                border-color: $dark-blue;
            }

            &:checked ~ ul {
                label {
                    opacity: 0.5;
                }

                label::before {
                    @include circle-checkbox-checked();
                }
            }
        }
    }
}

